tests/error/error18.jan
// error18: Usage of an integer, which is not defined.

x -> y;

z += x
